<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lTop"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvMyFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/rgAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/action_open" />

        <RadioButton
            android:id="@+id/rbNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_new" />

        <RadioButton
            android:id="@+id/rbLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_load" />

        <RadioButton
            android:id="@+id/rbExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_export" />

        <RadioButton
            android:id="@+id/rbViewTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_view_track" />

        <RadioButton
            android:id="@+id/rbExportTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_export_track" />

        <RadioButton
            android:id="@+id/rbDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_delete" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <RadioGroup
        android:id="@+id/rgMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbCsv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="csv" />

        <RadioButton
            android:id="@+id/rbGpx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="gpx" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spDirCsv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spDirCsv" />
    
    <Spinner
        android:id="@+id/spDirGpx"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spDirCsv" />

    <EditText
        android:id="@+id/etExportFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/etExportFile" />

    <LinearLayout
        android:id="@+id/lExport"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="From point" />

        <EditText
            android:id="@+id/etExportFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="until" />

        <EditText
            android:id="@+id/etExportUntil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/ckRemoveExported"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/ckRemoveExported" />

</LinearLayout>