<?xml version ="1.0" encoding ="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="truewatcher.tower.MainActivity" >

  <item
      android:id="@+id/action_delete_last_segment"
      android:orderInCategory="1"
      app:showAsAction="never"
      android:title="@string/action_delete_last_segment"
      />

  <item
      android:id="@+id/action_export_gpx"
      android:orderInCategory="2"
      app:showAsAction="never"
      android:title="@string/action_export_gpx"
      />

  <item
      android:id="@+id/action_settings"
      android:orderInCategory="100"
      app:showAsAction="ifRoom"
      android:title="@string/action_settings"
      />

</menu>